# LenguajesFormalesLaboratorio2

./: Main.hs  README.md
report/: report.tex
src/regex-posix/lazy_bytestring/: Main.hs  posix-lazy-bytestring.cabal
src/regex-posix/strict-bytestring/: Main.hs  posix-strict-bytestring.cabal
src/regex-posix/string/: Main.hs  posix-string.cabal
src/regex-tdfa/lazy-bytestring/: Main.hs  tdfa-lazy-bytestring.cabal
src/regex-tdfa/strict_bytstring/: Main.hs  tdfa-strict-bytestring.cabal
src/regex-tdfa/string/: Main.hs  tdfa-string.cabal
