cabal-version:      2.4
name:               tdfa-strict-bytestring
version:            0.1.0.0
license:            NONE
author:             Gregorio Perez, Luisa Toro
maintainer:         gperezb1@eafit.edu.co

library
  build-depends: base ^>=4.14.1.0
                 , regex-tdfa
                 , time
                 , bytestring

executable tdfa-strict-bytestring
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0,
                      regex-tdfa,
                      time,
                      bytestring
    default-language: Haskell2010
